tdf#156815 Reset solver settings when a sheet is renamed

When a sheet is renamed, the SolverSettings object needs to be reset so that the updated references of the named ranges are reloaded the next time the Solver dialog is opened.

Change-Id: I8d501bb5b52f6a69bc899a62863893744d80dc69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156872
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>